--- a/uw-sheet.html
+++ b/uw-sheet.html
@@ -1,4 +1,5 @@
 <form class="{{cssClass}}" autocomplete="off">
+    <input type="submit" value="Save">
     <header class="sheet-header">
         <img class="profile-img" src="{{actor.img}}" data-edit="img" title="{{actor.name}}" height="100" width="100"/>
     </header>
