--- a/uw-sheet.html
+++ b/uw-sheet.html
@@ -11,7 +11,7 @@
             background: transparent;
             border: 1px dotted lightgrey;
             width: 350px;
-        " type="text" value="{{actor.name}}" placeholder="Name"/>
+        " type="text" value="{{actor.name}}" placeholder="Name" name="name"/>
         <input style="position: absolute;
             left: 61px;
             top: 358px;
@@ -21,7 +21,7 @@
             background: transparent;
             border: none;
             font-size: 30px;"
-            type="text" value="{{actor.mettle}}" placeholder="+0"
+            type="text" value="{{actor.mettle}}" placeholder="+0" name="mettle"
         />
         <input style="position: absolute;
             left: 143px;
@@ -32,7 +32,7 @@
             background: transparent;
             border: none;
             font-size: 30px;"
-            type="text" value="{{actor.physique}}" placeholder="+0"
+            type="text" value="{{actor.physique}}" placeholder="+0" name="physique"
         />
         <input style="position: absolute;
             left: 224px;
@@ -43,7 +43,7 @@
             background: transparent;
             border: none;
             font-size: 30px;"
-            type="text" value="{{actor.influense}}" placeholder="+0"
+            type="text" value="{{actor.influense}}" placeholder="+0" name="influense"
         />
         <input style="position: absolute;
             left: 305px;
@@ -54,7 +54,7 @@
             background: transparent;
             border: none;
             font-size: 30px;"
-            type="text" value="{{actor.expertise}}" placeholder="+0"
+            type="text" value="{{actor.expertise}}" placeholder="+0" name="expertise"
         />
         <input style="position: absolute;
             left: 386px;
@@ -65,7 +65,7 @@
             background: transparent;
             border: none;
             font-size: 30px;"
-            type="text" value="{{actor.interface}}" placeholder="+0"
+            type="text" value="{{actor.interface}}" placeholder="+0" name="interface"
         />
         <textarea style="position: absolute;
             left: 500px;
@@ -73,7 +73,7 @@
             width:350px; height: 410px;
             border: 1px dotted lightgrey;
             background: transparent;
-        ">{{actor.assets}}</textarea>
+        "  name="assets">{{actor.assets}}</textarea>
 
         <input style="position: absolute;
             left: 480px;
@@ -84,7 +84,7 @@
             background: transparent;
             border: none;
             font-size: 30px;"
-            type="text" value="{{actor.armor}}" placeholder="0"
+            type="text" value="{{actor.armor}}" placeholder="0" name="armor"
         />
     </div>
     <br>
