--- a/uw-sheet.html
+++ b/uw-sheet.html
@@ -21,7 +21,7 @@
             background: transparent;
             border: none;
             font-size: 30px;"
-            type="text" value="{{data.mettle}}" placeholder="+0" name="mettle"
+            type="text" value="{{data.attributes.mettle}}" placeholder="+0" name="mettle"
         />
         <input style="position: absolute;
             left: 143px;
@@ -32,7 +32,7 @@
             background: transparent;
             border: none;
             font-size: 30px;"
-            type="text" value="{{data.physique}}" placeholder="+0" name="physique"
+            type="text" value="{{data.attributes.physique}}" placeholder="+0" name="physique"
         />
         <input style="position: absolute;
             left: 224px;
@@ -43,7 +43,7 @@
             background: transparent;
             border: none;
             font-size: 30px;"
-            type="text" value="{{data.influense}}" placeholder="+0" name="influense"
+            type="text" value="{{data.attributes.influense}}" placeholder="+0" name="influense"
         />
         <input style="position: absolute;
             left: 305px;
@@ -54,7 +54,7 @@
             background: transparent;
             border: none;
             font-size: 30px;"
-            type="text" value="{{data.expertise}}" placeholder="+0" name="expertise"
+            type="text" value="{{data.attributes.expertise}}" placeholder="+0" name="expertise"
         />
         <input style="position: absolute;
             left: 386px;
@@ -65,7 +65,7 @@
             background: transparent;
             border: none;
             font-size: 30px;"
-            type="text" value="{{data.interface}}" placeholder="+0" name="interface"
+            type="text" value="{{data.attributes.interface}}" placeholder="+0" name="interface"
         />
         <textarea style="position: absolute;
             left: 500px;
@@ -73,7 +73,7 @@
             width:350px; height: 410px;
             border: 1px dotted lightgrey;
             background: transparent;
-        "  name="assets">{{data.assets}}</textarea>
+        "  name="assets">{{data.attributes.assets}}</textarea>
 
         <input style="position: absolute;
             left: 480px;
@@ -84,7 +84,7 @@
             background: transparent;
             border: none;
             font-size: 30px;"
-            type="text" value="{{data.armor}}" placeholder="0" name="armor"
+            type="text" value="{{data.attributes.armor}}" placeholder="0" name="armor"
         />
     </div>
     <br>
